--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <nav>
       <a href="#">Home</a>
       <a href="#">Notícia</a>
-      <a href="#">Curiosidades</a>
-      <a href="#">Fale Conosco</a>
+      <a href="#">Contato</a>
     </nav>
     <main>
       <article>
@@ -43,10 +42,13 @@
           <a
             href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/"
             target="_blank"
-             class="externo">Dan Morrill.</a
+            class="externo"
+            >Dan Morrill.</a
           >
           Ele conta que abriu o
-          <a href="https://inkscape.org/pt-br/" target="_blank" class="externo">Inkscape</a>
+          <a href="https://inkscape.org/pt-br/" target="_blank" class="externo"
+            >Inkscape</a
+          >
           (software livre para vetorização de imagens) e criou sua própria
           versão de robô. O objetivo era apenas personificar o sistema apenas
           para a a sua equipe, não existia nenhuma solicitação da empresa para a
@@ -71,8 +73,9 @@
         <p>
           A ideia de ter um mascote foi amadurecendo e a missão foi passada para
           uma profissional da área. A ilustradora Russa
-          <a href="https://www.irinablok.com/" target="_blank" class="externo">Irina Blok</a>,
-          também funcionária do Google, ficou com a missão de representar o
+          <a href="https://www.irinablok.com/" target="_blank" class="externo"
+            >Irina Blok</a
+          >, também funcionária do Google, ficou com a missão de representar o
           pequeno robô de uma maneira mais agradável.
         </p>
 
@@ -152,7 +155,8 @@
             <a
               href="https://www.android.com/intl/en_uk/history/#/donut"
               target="_Blank"
-              class="externo">Android History</a
+              class="externo"
+              >Android History</a
             >
             para conhecer a sequência das versões "adocicadas" e o que cada uma
             trouxe para o sistema Android.
@@ -170,7 +174,7 @@
       <a
         href="https://github.com/gustavoguanabara/html-css/blob/master/aulas-pdf/13%20-%20Cores.pdf"
         target="_blank"
-         >Gustavo Guanabara</a
+        >Gustavo Guanabara</a
       >
       para o
       <a href="https://www.youtube.com/cursoemvideo" target="_blank"
